--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@novu/echo": "latest",
+    "@novu/echo": "0.0.1-alpha.23",
     "@react-email/components": "0.0.15",
     "@react-email/tailwind": "^0.0.14",
     "next": "14.1.0",
