--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "novu-echo-app-router",
+  "name": "lightonia-2fa",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,6 +13,7 @@
     "@react-email/components": "0.0.15",
     "@react-email/tailwind": "^0.0.14",
     "next": "14.1.0",
+    "openai": "^4.40.0",
     "react": "^18",
     "react-dom": "^18",
     "react-email": "2.1.0"
