--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@novu/echo": "0.0.1-alpha.23",
+    "@novu/node": "^0.24.1",
+    "@novu/notification-center": "^0.24.1",
     "@react-email/components": "0.0.15",
     "@react-email/tailwind": "^0.0.14",
     "next": "14.1.0",
