feat: Add prefilled messages and professions

--- a/package.json
+++ b/package.json
@@ -9,16 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@novu/echo": "0.0.1-alpha.23",
     "@novu/node": "^0.24.1",
     "@novu/notification-center": "^0.24.1",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@react-email/components": "0.0.15",
     "@react-email/tailwind": "^0.0.14",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "input-otp": "^1.2.4",
+    "lucide-react": "^0.377.0",
     "next": "14.1.0",
     "openai": "^4.40.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-email": "2.1.0"
+    "react-email": "2.1.0",
+    "react-hook-form": "^7.51.3",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.5"
   },
   "devDependencies": {
     "@types/node": "^20",
