--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@novu/echo": "0.0.1-alpha.23",
     "@novu/node": "^0.24.1",
     "@novu/notification-center": "^0.24.1",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
@@ -24,11 +26,14 @@
     "input-otp": "^1.2.4",
     "lucide-react": "^0.377.0",
     "next": "14.1.0",
+    "next-themes": "^0.3.0",
     "openai": "^4.40.0",
     "react": "^18",
     "react-dom": "^18",
     "react-email": "2.1.0",
     "react-hook-form": "^7.51.3",
+    "react-infinite-scroll-component": "^6.1.0",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.5"
