--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
-    "@novu/echo": "0.0.1-alpha.23",
-    "@novu/node": "^0.24.1",
-    "@novu/notification-center": "^0.24.1",
+    "@novu/framework": "link:/Users/rifont/git/novu/packages/framework",
+    "@novu/notification-center": "^0.24.2",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.4",
@@ -36,7 +35,8 @@
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.5"
+    "zod": "^3.23.5",
+    "zod-to-json-schema": "^3.23.1"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -47,5 +47,6 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
-  }
+  },
+  "packageManager": "pnpm@9.1.1+sha512.14e915759c11f77eac07faba4d019c193ec8637229e62ec99eefb7cf3c3b75c64447882b7c485142451ee3a6b408059cdfb7b7fa0341b975f12d0f7629c71195"
 }
